--- a/design/postcss/components/_footer.css
+++ b/design/postcss/components/_footer.css
@@ -73,13 +73,13 @@ footer {
 
 .footer-right-bg {
     width: 16%;
-    height: 136px;
+    height: 250px;
     position: absolute;
     right: 0;
     top: 0;
     background-image: resolve('footer-bg.png');
     background-repeat: no-repeat;
-    background-size: auto 150%;
+    background-size: auto 100%;
     z-index: 1;
 }
 
@@ -95,9 +95,59 @@ footer {
 
 @media $breakpoint-wide-tablets {
     footer {
+        min-height: 400px;
+        
         .section-title {
             height: 79px;
         }
+
+        .email-subscription {
+            margin-left: 20px;
+        }
+
+        .logo-img {
+            width: 32px;
+            height: 20px;
+            vertical-align: middle;    
+
+            &:after {
+                display: none;
+            }
+        }
+    }
+
+    .footer-right-bg {
+        width: 40%;
+        height: 60px;
+        background-image: resolve('footer-mobile-bg.svg');
+        background-size: contain;
+        background-position: right 100%;
+    }
+
+    .social-list {
+        padding: 0;
+        margin-top: 50px;
+    }
+
+    .footer-logo {
+        position: initial;
+        text-align: center;
+    }
+
+    .footer-links { 
+        margin-top: 20px;
+
+        .link {
+            font-size: 13px;
+            &:after {
+                margin: 0 15px;
+            }
+        }
+    }
+
+    .copyright {
+        position: initial;
+        text-align: center;
     }
 }
 
@@ -107,6 +157,7 @@ footer {
 
         .email-subscription {
             width: 100%;
+            margin-left: 0;
         }
         .section {
             padding-left: 17px;
@@ -117,12 +168,10 @@ footer {
             width: 32px;
             height: 20px;
             vertical-align: middle;    
-        }
- 
-        .logo-text {   
-            display: inline-block;
-            vertical-align: middle;
-            font-size: 20px;
+
+            &:after {
+                display: none;
+            }
         }
     }
 
