--- a/design/postcss/containers/_section-exchange.css
+++ b/design/postcss/containers/_section-exchange.css
@@ -102,31 +102,13 @@
         height: 365px;
         position: relative;
         margin-top: 65px;
-        background-image: resolve('mv.jpg');
+        background-image: resolve('mv2.png');
         background-size: 100% 100%;
         background-repeat: no-repeat;
         display: inline-block;
         border-radius: 6.7px;
         cursor: pointer;
         z-index: 4;
-    }
-
-    .section-exchange-video-shadow {
-        &:before {
-            width: 500px;
-            height: 365px;
-            position: absolute;
-            top: 4px;
-            margin-top: 65px;
-            margin-left: 4px;
-            opacity: 0.25;
-            border-radius: 5px;
-            filter: blur(20.3px);
-            background-image: linear-gradient(to left, #133364, #0087ff);
-            content: '';
-            display: inline-block;
-            z-index: 3;
-        }
     }
 
     .list-container {
@@ -241,25 +223,28 @@
     }
 
     .section-exchange-slider-item-center-animation {
-        .loader-circle {
-            animation: slide 1.5s;
+        .exchange-loader-circle {
+            width: 17px;
+            height: 17px;
+            position: relative;
+            border-radius: 100%;
+            display: inline-block;
+            animation: slide 1.5s 1;
         }
 
-        .loader-circle-left {
+        .exchange-loader-circle-left {
             transform-origin: right;
             opacity: 0.95;
             margin-left: 20px;
             z-index: 2;
-            animation: slide 1.5s;
             opacity: 0.8;
             background-color: #2c9afc;
         }
 
-        .loader-circle-right {
+        .exchange-loader-circle-right {
             transform-origin: left;
-            margin-left: -20px;
+            margin-left: -5px;
             z-index: 1;
-            animation: slide 1.5s;
             animation-delay: 2s;
             opacity: 0.8;
             background-color: #43c7fc;
@@ -302,6 +287,7 @@
     .desktop-slider-circle {
         width: 100%;
         height: 100%;
+        min-height: 240px;
         margin: 10px 10px;
         position: relative;
         background-image: resolve('exchange-circle-bg.png');
@@ -432,13 +418,6 @@
             height: 338px;
         }
 
-        .section-exchange-video-shadow {
-            &:before {
-                width: 475px;
-                height: 338px;
-            }
-        }
-
         .desktop-slider-item {
             width: 93%;
         }
@@ -454,13 +433,6 @@
         .section-exchange-video {
             width: 450px;
             height: 322px;
-        }
-
-        .section-exchange-video-shadow {
-            &:before {
-                width: 450px;
-                height: 322px;
-            }
         }
 
         .desktop-slider-item {
@@ -489,6 +461,32 @@
                 width: 95%;
             }
         }
+
+        .desktop-slider-circle-2 {
+            width: 80px;
+            height: 80px;
+            top: 43%;
+            left: 33%;
+            &:before {
+                width: 50%;
+                height: 50%;
+                top: 25%;
+                left: 35%;
+            }
+        }
+
+        .desktop-slider-circle-3 {
+            width: 70px;
+            height: 70px;
+            top: calc(35% + 70px);
+            left: calc(30% + 70px);
+            &:before {
+                width: 50%;
+                height: 50%;
+                top: 25%;
+                left: 35%;
+            }
+        }
     }
 
     @media $breakpoint-tablet {
@@ -506,18 +504,22 @@
             background-size: contain;
         }
 
-        .section-exchange-video-shadow {
-            &:before {
-                width: 85%;
-                height: 200px;
-                margin-top: 35px;
-            }
-        }
-
         .list-desc {
             max-width: 95%;
             font-size: 15px;
             .title {
+                font-size: 13px;
+            }
+        }
+    }
+
+    @media screen and (max-width: 690px) {
+        .desktop-slider-item {
+            .title {
+                font-size: 15px;
+            }
+
+            .desc {
                 font-size: 13px;
             }
         }
@@ -586,13 +588,6 @@
 
         .section-exchange-video {
             width: 100%;
-        }
-
-        .section-exchange-video-shadow {
-            &:before {
-                width: 100%;
-                height: 86%;
-            }
         }
 
         .section-exchange-bg {
