--- a/design/postcss/containers/_section-media.css
+++ b/design/postcss/containers/_section-media.css
@@ -29,6 +29,7 @@
     position: absolute;
     top: 0;
     left: 0;
+    border-radius: 5px;
     background-image: linear-gradient(to top, #000000, rgba(0, 0, 0, 0.48) 39%, rgba(0, 0, 0, 0.48) 58%, #000000);
     cursor: pointer;
 }
