--- a/design/postcss/containers/_section-roadmap.css
+++ b/design/postcss/containers/_section-roadmap.css
@@ -48,7 +48,7 @@
 
 .roadmap-item {
     font-size: 17px;
-    line-height: 2.29;
+    line-height: 25px;
     color: #133364;
     border-top: solid 1px rgba(19, 51, 100, 0.3);
 
@@ -71,12 +71,13 @@
     li {
         position: relative;
         padding: 0 30px;
+        margin-bottom: 15px;
 
         &:before {
             width: 18px;
             height: 18px;
             position: absolute;
-            top: 10px;
+            top: 3px;
             left: 0px;
             display: block;
             content: '';
@@ -103,10 +104,18 @@
         }
 
         .roadmap-item {
-            line-height: 1.84;
+            line-height: 22px;
             .title {
                 margin: 22px 0;
                 font-size: 23px;
+            }
+
+            li {
+                margin-bottom: 10px;
+
+                &:before {
+                    top: 2px;
+                }
             }
         }
 
