--- a/design/postcss/containers/_section-team.css
+++ b/design/postcss/containers/_section-team.css
@@ -288,6 +288,10 @@ $member-img-mobile-width: 130px;
             }
         }
     }
+
+    .member-desc {
+        font-size: 16px;
+    }
 }
 
 @media $breakpoint-small-tablet {
