--- a/design/postcss/generals/_global.css
+++ b/design/postcss/generals/_global.css
@@ -6,6 +6,7 @@
 
 body {
 	-webkit-font-smoothing: antialiased;
+	background-color: #133364;
 
 	&.lock {
 		position: fixed;
@@ -79,18 +80,20 @@ input[type=text], input[type=email], textarea {
 .logo-img {
 	width: 56px;
 	height: 33px;
-	margin-right: 5px;
 	background: no-repeat resolve(logo.svg);
 	background-size: 100% 100%;
 	display: inline-block;
-}
 
-.logo-text {
-	font-size: 30px;
-	font-weight: bold;
-	line-height: 38px;
-	color: #ffffff;
-	vertical-align: top;
+	&:after {
+		width: 100px;
+		height: 33px;
+		position: absolute;
+		left: 65px;
+		background: no-repeat resolve(logo-text.svg);
+		background-size: 100% 100%;
+		display: inline-block;
+		content: '';
+	}
 }
 
 .video-content {
@@ -130,11 +133,11 @@ input[type=text], input[type=email], textarea {
 	.logo-img {
 		width: 50px;
 		height: 33px;
-	}
 
-	.logo-text {
-		font-size: 28px;
-		line-height: 36px;
+		&:after {
+			width: 90px;
+			left: 55px;
+		}
 	}
 
 	.nav-wrap {
@@ -159,10 +162,10 @@ input[type=text], input[type=email], textarea {
 		width: 48px;
     	height: 28px;
 		margin-right: 7px;
-	}
 
-	.logo-text {
-		display: none;
+		&:after {
+			display: none;
+		}
 	}
 
 	.video-content {
