--- a/design/postcss/components/_footer.css
+++ b/design/postcss/components/_footer.css
@@ -3,6 +3,10 @@ footer {
     position: relative;
     background: #0a336a;
 
+    &.up {
+        margin-bottom: 45px;
+    }
+
     .section {
         padding-top: 48px;
         padding-bottom: 48px;
